--- a/back/package.json
+++ b/back/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/runtime": "^7.7.7",
     "@koa/cors": "^2.2.3",
+    "@koa/multer": "^2.0.2",
     "babel-loader": "^8.0.6",
     "config": "^3.2.4",
     "koa": "^2.11.0",
@@ -26,7 +27,9 @@
     "koa-passport": "^4.1.3",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.3",
+    "koa-static": "^5.0.0",
     "lodash": "^4.17.15",
+    "multer": "^1.4.2",
     "passport-local": "^1.0.0"
   }
 }
